Add information about the expo project

--- a/app.json
+++ b/app.json
@@ -1,5 +1,24 @@
+
 {
   "expo": {
-    "sdkVersion": "19.0.0"
+    "name": "react-native-intro-animation",
+    "description": "Learning by doing 9/∞",
+    "slug": "react-native-intro-animation",
+    "privacy": "public",
+    "sdkVersion": "19.0.0",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "primaryColor": "#cccccc",
+    "icon": "https://s3.amazonaws.com/exp-brand-assets/ExponentEmptyManifest_192.png",
+    "loading": {
+      "icon": "https://s3.amazonaws.com/exp-brand-assets/ExponentEmptyManifest_192.png",
+      "hideExponentText": false
+    },
+    "packagerOpts": {
+      "assetExts": ["ttf", "mp4"]
+    },
+    "ios": {
+      "supportsTablet": true
+    }
   }
 }
